# MathEditor

./: CMakeLists.txt
MathEditor/: CMakeLists.txt  MathEditor.cpp  MathEditor.h  config.h  fonts.cpp  fonts.h  imstb_loader.cpp  text.cpp  text.h  utils.cpp  utils.h  widget_catalog.h  widget_def.h  widgets.cpp  widgets.h  widgets.inl  widgets_g.inl
MathEditor/rendering/: render.cpp  render.h  render_def.h
MathEditor/utils/: file_utils.hpp  type_utils.hpp
MathEditor/widget/: debug_load.cpp  debug_load.h  widget_def.h  widgets.cpp  widgets.h  widgets.inl  widgets_g.inl
